--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@directus/sdk": "^15.0.3",
     "@kobalte/core": "^0.12.6",
+    "@modular-forms/solid": "^0.20.0",
     "@solidjs/router": "^0.13.1",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
@@ -27,6 +28,7 @@
     "solid-js": "^1.8.11",
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.4.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "valibot": "^0.30.0"
   }
 }
