--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vite-tsconfig-paths": "^4.3.2"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.29.1",
     "@kobalte/core": "^0.12.6",
     "@modular-forms/solid": "^0.20.0",
     "@solidjs/router": "^0.13.1",
@@ -25,7 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "neverthrow": "^6.1.0",
-    "solid-js": "^1.8.11",
+    "solid-js": "^1.8.16",
     "strapi-sdk-js": "^2.3.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.4.3",
