--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "neverthrow": "^6.1.0",
+    "quill": "^2.0.0",
     "solid-js": "^1.8.16",
+    "solid-quill": "^0.3.4",
     "strapi-sdk-js": "^2.3.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.4.3",
