--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.5",
     "solid-devtools": "^0.29.3",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
