token based auth done

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "effect": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "neverthrow": "^6.1.0",
     "quill": "^2.0.0",
     "solid-js": "^1.8.16",
