--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_STRAPI_URL="http://localhost:1337"
-VITE_ORIGIN="http://localhost:3000"
+VITE_STRAPI_URL="https://orange-gas-strapi.fly.dev"
+VITE_ORIGIN="https://orangegas.in"
