--- a/nginx.conf
+++ b/nginx.conf
@@ -1,23 +1,12 @@
-server {
-  listen 8080;
-  listen [::]:8080;
+worker_processes 4;
 
-  server_name example.com;
+events { worker_connections 1024; }
 
-  location / {
-      proxy_pass https://realexample.com/;
-      proxy_set_header X-Forwarded-Host $http_host;
-  }
-}
-
-server {
-  listen 8080;
-  listen [::]:8080;
-
-  server_name exemplum.com;
-
-  location / {
-      proxy_pass https://realexemplum.com/;
-      proxy_set_header X-Forwarded-Host $http_host;
-  }
+http {
+    server {
+        listen 8080;
+        root  /usr/share/nginx/html/;
+        include /etc/nginx/mime.types;
+       try_files $uri $uri/ /index.html;
+    }
 }
