--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ events { worker_connections 1024; }
 http {
     server {
         listen 80;
-        root  /usr/share/nginx/html/;
+        root  /usr/share/nginx/html;
         include /etc/nginx/mime.types;
        try_files $uri $uri/ /index.html;
     }
