--- a/fly.toml
+++ b/fly.toml
@@ -16,6 +16,11 @@ auto_start_machines = true
 min_machines_running = 0
 processes = ['app']
 
+[[services.ports]]
+force_https = true
+handlers = ["http"]
+port = 80
+
 [[vm]]
 memory = '512mb'
 cpu_kind = 'shared'
