--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_STRAPI_URL="http://localhost:1337"
 VITE_ORIGIN="http://localhost:3000"
-VITE_PROD_API="https://orange-gas-strapi.fly.dev"
+VITE_PROD_API="http://localhost:1337"
