--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@editorjs/editorjs": "^2.29.1",
     "@kobalte/core": "^0.13.1",
     "@modular-forms/solid": "^0.20.0",
+    "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.13.1",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
